<resources>
    <string name="app_name">MSP Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>


    <string name="title_activity_food">Restaurants</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_student_activity">Student Activities</string>
    <string name="title_activity_student_activity_details">Student Activity</string>
    <string name="title_activity_coworking_spaces">Co-working Spaces</string>
    <string name="title_activity_coworking_space_details">Co-working Space</string>


    <string name="title_activity_home">HomeActivity</string>

    <string name="title_home">Home</string>
    <string name="news_feed">News Feed</string>
    <string name="map">Map</string>
    <string name="restaurants">Restaurants</string>
    <string name="table">Today Table</string>
    <string name="title_activity_tools">ToolsActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="tools">Tools</string>
    <string name="title_activity_lec_table">Lecture Table</string>
    <string name="lecture_table">Lecture Table</string>
    <string name="coworkingspaces">Co-Working Spaces</string>
    <string name="studentactivities">Student Activities</string>
    <string name="subjects">Subjects</string>
    <string name="title_activity_subjects">SubjectsActivity</string>
    <string name="privacypolicy">Privacy Policy</string>

    <string name="wait">Please Wait</string>

    <string name="msp_preferences">mspPreferences</string>
    <string name="group_num">groupNum</string>
    <string name="student_activity">studentActivity</string>
    <string name="restaurant">restaurant</string>
    <string name="coworkingSpace">coworkingSpace</string>
    <string name="lecturesTable">lecturesTable</string>
    <string name="title_activity_materials">MaterialsActivity</string>
    <string name="materials">Materials</string>
    <string name="about_developers">About Developers</string>

    <string name="chemistry">Chemistry</string>
    <string name="english">English</string>
    <string name="physics">Physics</string>
    <string name="math">Math</string>
    <string name="statics">Statics</string>

    <string name="MSPAssisstant">MSP Assistant</string>
    <string name="aboutDescription">This App is developed by MSP Android Committee\'18</string>
    <string name="Developers">Developers</string>
    <string name="Adel">Ahmed Adel</string>
    <string name="AdelPos">Developer (Head)</string>
    <string name="Laila">Laila Al-Ashkar</string>
    <string name="LailaPos">Developer</string>
    <string name="Massoud">Mohammad Massoud</string>
    <string name="MassoudPos">Designer/Developer</string>


</resources>
