<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>

        <item
            android:id="@+id/nav_lec_table"
            android:icon="@drawable/ic_baseline_table_chart_24px"
            android:title="@string/lecture_table" />

        <item
            android:id="@+id/nav_materials"
            android:icon="@drawable/ic_baseline_book_24px"
            android:title="@string/materials" />


        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_icon_food"
            android:title="@string/restaurants" />
        <!--

                <item
                    android:id="@+id/nav_tools"
                    android:icon="@drawable/ic_tools"
                    android:title="@string/tools" />
        -->


        <item
            android:id="@+id/nav_coworkingspaces"
            android:icon="@drawable/ic_networking"
            android:title="@string/coworkingspaces"/>

        <item
            android:id="@+id/nav_studentactivities"
            android:icon="@drawable/ic_work_team"
            android:title="@string/studentactivities"/>

        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/notebook"
            android:title="@string/subjects"/>


    </group>


</menu>
