<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.AboutDevelopersActivity"
    tools:showIn="@layout/app_bar_about_dev">


    <ImageView
        android:id="@+id/MSPLogo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/horizontalGuideline"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/MSPAssisstant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/MSPAssisstant"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/MSPLogo" />

    <TextView
        android:id="@+id/aboutDes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/aboutDescription"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/MSPAssisstant" />

    <TextView
        android:id="@+id/developers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Developers"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/aboutDes" />

    <ImageView
        android:id="@+id/AdelLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/AdelGH"
        app:layout_constraintHorizontal_bias="0.929"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/developers"
        app:srcCompat="@drawable/linkedin1" />

    <ImageView
        android:id="@+id/AdelGH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/developers"
        app:srcCompat="@drawable/github1" />

    <TextView
        android:id="@+id/Adel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Adel"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/AdelGH" />

    <TextView
        android:id="@+id/AdelPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AdelPos"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/Adel" />

    <ImageView
        android:id="@+id/LailaLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/LailaGH"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/AdelPos"
        app:srcCompat="@drawable/linkedin1" />

    <ImageView
        android:id="@+id/LailaGH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintBottom_toTopOf="@+id/Laila"
        app:layout_constraintEnd_toStartOf="@+id/MassoudLI"
        app:layout_constraintTop_toBottomOf="@+id/AdelPos"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/github1" />

    <TextView
        android:id="@+id/Laila"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Laila"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/Massoud"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/LailaLI" />

    <TextView
        android:id="@+id/LailaPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LailaPos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/MassoudPos"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/Laila"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/MassoudLI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toStartOf="@+id/MassoudGH"
        app:layout_constraintTop_toBottomOf="@+id/AdelPos"
        app:srcCompat="@drawable/linkedin1" />

    <ImageView
        android:id="@+id/MassoudGH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        app:layout_constraintBottom_toTopOf="@+id/Massoud"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/AdelPos"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/github1" />

    <TextView
        android:id="@+id/Massoud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Massoud"
        android:textColor="@color/black"
        android:textSize="@dimen/text_small"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/MassoudLI" />

    <TextView
        android:id="@+id/MassoudPos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/MassoudPos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/rightGuideline"
        app:layout_constraintTop_toBottomOf="@+id/Massoud"
        app:layout_constraintVertical_bias="0.0" />


    <android.support.constraint.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
</android.support.constraint.ConstraintLayout>